Let 'Distance' on airport distance table be right align, fix #405

--- a/app/assets/stylesheets/main/sb.css.scss
+++ b/app/assets/stylesheets/main/sb.css.scss
@@ -106,7 +106,7 @@ p, label {
   z-index: 8;
 }
 
-table.theme-table {
+.theme-table {
   border-bottom-width: 4px;
   border-bottom-style: solid;
   background-color: #f7f7f7;
